@@ -1,3 +1,10 @@
+Thu Feb 19 20:33:26 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* ve/ve-miscui.[ch]: remove the option menu func since option menu is
+	  deprecated anyway
+
+	* src/gnome-genius.c: use g_idle_add instead of gtk_idle_add
+
 Wed Feb 18 00:28:12 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: handle read only files properly.  Also verify 
